Indexer: Fix javadoc generation on CI